# test-page-python

./: 404.html  Dockerfile  docker-compose.yml  index.html  objects.inv
python-project-with-mkdocs/: Dockerfile  docker-compose.yml  mkdocs.yml  pyproject.toml
python-project-with-mkdocs/api-docs/: conf.py  modules.rst
python-project-with-mkdocs/api-docs/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  python_project_with_mkdocs.html  search.html  searchindex.js
python-project-with-mkdocs/api-docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree  python_project_with_mkdocs.doctree
python-project-with-mkdocs/api-docs/_build/_sources/: index.rst.txt  python_project_with_mkdocs.rst.txt
python-project-with-mkdocs/docs/: index.md
python-project-with-mkdocs/python_project_with_mkdocs/: __init__.py  sample_calc.py
