[tool.poetry]
name = "python-project-with-mkdocs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"
sphinx = "^7.3.7"
furo = "^2024.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
